--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.7.2
+asgiref==3.7.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
@@ -18,3 +18,5 @@ typing_extensions==4.11.0
 tzdata==2023.3
 urllib3==2.2.1
 whitenoise==6.6.0
+psycopg2-binary==2.9.1
+
